@@ -11,10 +11,12 @@ add_subdirectory(custom_ops)
 add_poptorch_py_unit_test(activations)
 add_poptorch_py_unit_test(batching)
 add_poptorch_py_unit_test(bert_small_and_medium)
+add_poptorch_py_unit_test(blas)
 add_poptorch_py_unit_test(buffers)
 add_poptorch_py_unit_test(convs)
 add_poptorch_py_unit_test(custom_loss)
 add_poptorch_py_unit_test(custom_ops)
+add_poptorch_py_unit_test(dataloader)
 add_poptorch_py_unit_test(half)
 add_poptorch_py_unit_test(inputs)
 add_poptorch_py_unit_test(losses)
@@ -23,13 +25,14 @@ add_poptorch_py_unit_test(math_ops)
 add_poptorch_py_unit_test(misc_nn_layers)
 add_poptorch_py_unit_test(non_contiguous_tensors)
 add_poptorch_py_unit_test(norms)
-add_poptorch_py_unit_test(optimizers)
 add_poptorch_py_unit_test(ops)
+add_poptorch_py_unit_test(optimizers)
 add_poptorch_py_unit_test(options)
+add_poptorch_py_unit_test(outputs)
 add_poptorch_py_unit_test(pooling_and_padding)
 add_poptorch_py_unit_test(random_sampling)
-add_poptorch_py_unit_test(resnets_inference)
 add_poptorch_py_unit_test(replicated_graph)
+add_poptorch_py_unit_test(resnets_inference)
 add_poptorch_py_unit_test(shape_inference)
 add_poptorch_py_unit_test(tensor_ops)
 add_poptorch_py_unit_test(type_support1)
