@@ -1,69 +1,59 @@
 #!/usr/bin/env python3
 # Copyright (c) 2020 Graphcore Ltd. All rights reserved.
 
+import pytest
 import torch
 import poptorch
 
 
-def blas_op(op, input1, input2, eq):
+def blas_op(op, input1, input2, out):
     class Model(torch.nn.Module):
         def __init__(self, op):
             super(Model, self).__init__()
             self.op = op
 
-        def forward(self, x, y):
-            return self.op(x, y)
-
-    model = Model(op)
-
-    # Run on CPU.
-    nativeOut = model(input1, input2)
-
-    # Run on IPU.
-    poptorch_model = poptorch.inferenceModel(model)
-    poptorch_out = poptorch_model(input1, input2)
-
-    assert eq(nativeOut, poptorch_out)
-
-
-def blas_op_optional_arg(op, input1, input2, out, eq):
-    class Model(torch.nn.Module):
-        def __init__(self, op):
-            super(Model, self).__init__()
-            self.op = op
-
-        def forward(self, x, y, out):
+        def forward(self, x, y, out=None):
             return self.op(x, y, out=out)
 
     model = Model(op)
-
+    args = [input1, input2]
+    if out is not None:
+        args.append(out)
     # Run on CPU.
-    nativeOut = model(input1, input2, out)
+    nativeOut = model(*args)
 
     # Run on IPU.
     poptorch_model = poptorch.inferenceModel(model)
-    poptorch_out = poptorch_model(input1, input2, out)
+    poptorch_out = poptorch_model(*args)
 
-    assert eq(nativeOut, poptorch_out)
-    assert eq(nativeOut, out)
+    torch.testing.assert_allclose(nativeOut,
+                                  poptorch_out,
+                                  atol=1e-05,
+                                  rtol=1e-05,
+                                  equal_nan=True)
+    if out is not None:
+        torch.testing.assert_allclose(nativeOut,
+                                      out,
+                                      atol=1e-05,
+                                      rtol=1e-05,
+                                      equal_nan=True)
 
 
-def test_blas_ops_float():
+@pytest.mark.parametrize("optional_out", [True, False])
+def test_matmul(optional_out):
     torch.manual_seed(42)
 
     input1 = torch.randn([10, 200])
     input2 = torch.randn([200, 45])
-    out = torch.randn([10, 45])
+    out = torch.randn([10, 45]) if optional_out else None
 
-    def compare(x, y):
-        return torch.allclose(x, y, atol=1e-05, equal_nan=True)
+    blas_op(torch.matmul, input1, input2, out)
 
-    blas_op(torch.matmul, input1, input2, compare)
-    blas_op_optional_arg(torch.matmul, input1, input2, out, compare)
 
+@pytest.mark.parametrize("optional_out", [True, False])
+def test_bmm(optional_out):
     input1 = torch.randn([12, 10, 200])
     input2 = torch.randn([12, 200, 33])
-    out = torch.randn([12, 10, 33])
+    out = torch.randn([12, 10, 33]) if optional_out else None
 
-    blas_op(torch.bmm, input1, input2, compare)
-    blas_op_optional_arg(torch.bmm, input1, input2, out, compare)
+    blas_op(torch.bmm, input1, input2, out)
